# ogc

./: .dockerignore  .gitignore  .pylintrc  .pyre_configuration  .travis.yml  404.html  Dockerfile  Dockerfile.celery  README  alembic.ini  dev.sh  docker-compose.yml  index.html  mkdocs.yml  objects.inv  ogc-dev.toml  ogc-self-test.toml  ogc.toml  ogc.yml  punch_config.py  punch_version.py  pyproject.toml  pytest.ini  readme.md  requirements.in  requirements.txt  requirements_dev.txt  requirements_doc.txt  requirements_test.txt  setup.py  sitemap.xml  subs.j2  tasks.py  tox.ini
.pyre/: pyre.stderr
.pyre/new_server/: server.stderr  server.stderr.2022_04_16_21_44_38_743872
alembic/: env.py
alembic/versions/: 74ec3efdd65e_fix_backref.py  88ed8d6d9d75_add_timestamps.py  9f282c6f91d4_add_user_slug.py  e4b99ddb88c5_added_user_table_expand_attributes_in_.py
commands/ogc/: index.html
commands/ogc-db-migrate/: index.html
commands/ogc-exec/: index.html
commands/ogc-exec-scripts/: index.html
commands/ogc-init/: index.html
commands/ogc-inspect/: index.html
commands/ogc-launch/: index.html
commands/ogc-log/: index.html
commands/ogc-ls/: index.html
commands/ogc-ls-key-pairs/: index.html
commands/ogc-pull-artifacts/: index.html
commands/ogc-pull-files/: index.html
commands/ogc-push-files/: index.html
commands/ogc-rm/: index.html
commands/ogc-rm-all/: index.html
commands/ogc-rm-key-pairs/: index.html
commands/ogc-server/: index.html
commands/ogc-shell/: index.html
commands/ogc-ssh/: index.html
commands/ogc-status/: index.html
contrib/packer/: README.md  win2016.json  win2019.json  win2022.json
contrib/packer/common/: add-ogc-user.ps1  chocolatey.ps1  init-user-ogc.ps1  install-ssh-server.ps1
developer-guide/api/actions/: index.html
developer-guide/api/db/: index.html
developer-guide/api/deployer/: index.html
developer-guide/api/fs/: index.html
developer-guide/api/loader/: index.html
developer-guide/api/models/actions/: index.html
developer-guide/api/models/layout/: index.html
developer-guide/api/models/machine/: index.html
developer-guide/api/models/tags/: index.html
developer-guide/api/models/utils/: index.html
developer-guide/api/provision/: index.html
developer-guide/api/templatetags/: index.html
developer-guide/managing-nodes/: index.html
docs/: index.md  ogc-spec-full.toml  ogc-spec-juju-runner.toml  ogc-spec-runner-shell.toml  spec.md  subs.j2  test-plan-spec.toml
docs/commands/: ogc-db-migrate.md  ogc-exec-scripts.md  ogc-exec.md  ogc-init.md  ogc-inspect.md  ogc-launch.md  ogc-log.md  ogc-ls-key-pairs.md  ogc-ls.md  ogc-pull-artifacts.md  ogc-pull-files.md  ogc-push-files.md  ogc-rm-all.md  ogc-rm-key-pairs.md  ogc-rm.md  ogc-server.md  ogc-shell.md  ogc-ssh.md  ogc-status.md  ogc.md
docs/developer-guide/: managing-nodes.md
docs/developer-guide/api/: actions.md  db.md  deployer.md  fs.md  loader.md  provision.md  templatetags.md
docs/developer-guide/api/models/: actions.md  layout.md  machine.md  tags.md  utils.md
docs/plugins/: charm.md  env.md  juju.md  runner.md  spec.md
docs/user-guide/: defining-layouts.md  managing-nodes.md  navigating-nodes.md  providers.md  scripting.md  sharing.md  upgrading.md  windows.md
docs/user-guide/configuration/docker/: gcloud-auth.md  ssh.md
docs/user-guide/cookbook/: docker-gcloud-auth.md  template-access-node-info.md
fixtures/: env-cleanup  env.properties  functions.mako  lib.sh  ogc-spec-env.yml  ogc-spec-full.yml  ogc-spec-install-pkgs.toml  ogc-spec-min.yml  ogc-spec-provision.yml  ogc-spec-run-dep-plugin.toml  ogc-spec-validate-concurrent.yml  ogc-spec-validate.yml  sdk_ex.py  show-metadata  show-metadata-gce
fixtures/ex_deploy_debian/: 01_show-metadata  teardown
fixtures/ex_deploy_sles/: 01_show-metadata  teardown
fixtures/ex_deploy_ubuntu/: 01-setup  01-show-metadata  02-bash-script  02-elastic-agent  02-python-script  teardown
fixtures/ex_deploy_ubuntu_aws/: 01-show-metadata  02-elastic-agent
fixtures/ex_deploy_windows/: 01-show-metadata
fixtures/layouts/: centos.py  layouts.yml  ubuntu.py
fixtures/random_scripts/: 01-setup
fixtures/services/apmsoak/: .plan.yml  install  operate
fixtures/services/apmsoak/.maint/: Dockerfile  build.py
fixtures/services/docker/: .plan.yml  install
fixtures/services/elastic-package/: .plan.yml  install
maint/: db.py  google.py
man/: ogc-db-migrate.1  ogc-exec-scripts.1  ogc-exec.1  ogc-init.1  ogc-inspect.1  ogc-launch.1  ogc-log.1  ogc-ls-key-pairs.1  ogc-ls.1  ogc-pull-artifacts.1  ogc-pull-files.1  ogc-push-files.1  ogc-rm-all.1  ogc-rm-key-pairs.1  ogc-rm.1  ogc-server.1  ogc-shell.1  ogc-ssh.1  ogc-status.1  ogc.1
ogc/: __init__.py  actions.py  app.py  aws.py  backend.py  cache.py  celery.py  charm.py  collect.py  config.py  console.py  db.py  debug.py  dep.py  deployer.py  enums.py  exceptions.py  fs.py  loader.py  log.py  models.py  provision.py  run.py  service.py  signals.py  snap.py  spec.py  ssh.py  state.py  tasks.py  templatetags.py
ogc/api/: __init__.py  charm.py  release.py  report.py  snap.py
ogc/commands/: __init__.py  add.py  base.py  charm.py  collect.py  db.py  dep.py  destroy.py  down.py  execute.py  export.py  init.py  inspect.py  launch.py  layout.py  list.py  log.py  ls.py  release.py  report.py  run.py  server.py  share.py  snap.py  ssh.py  status.py  up.py
ogc/models/: __init__.py  actions.py  bundle.py  layout.py  machine.py  snap.py  tags.py  utils.py
ogc/tests/: __init__.py  test_dep.py
search/: search_index.json
tests/: test_ogc.py
tests/fixtures/: spec-base.yml  spec-condition.yml  spec-include.yml  spec-interpolated.toml  spec-matrix.yml  spec.toml  spec.yml
tools/: docgen
user-guide/cookbook/template-access-node-info/: index.html
user-guide/defining-layouts/: index.html
user-guide/managing-nodes/: index.html
user-guide/navigating-nodes/: index.html
user-guide/providers/: index.html
user-guide/scripting/: index.html
user-guide/sharing/: index.html
user-guide/upgrading/: index.html
user-guide/windows/: index.html
(+2 files in other folders)
