[tool.poetry]
name = "ogc"
version = "4.0.2"
description = "Provisioner, no more, no less."
authors = ["Adam Stokes <51892+adam-stokes@users.noreply.github.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/adam-stokes/ogc"
repository = "https://github.com/adam-stokes/ogc"

[tool.poetry.dependencies]
python = "^3.11"
sh = "*"
click = "*"
python-dotenv = "*"
melddict = "*"
paramiko = "*"
Mako = "*"
retry = "*"
click-didyoumean = "*"
rich = "*"
python-slugify = "*"
attrs = "*"
cattrs = "*"
toolz = "*"
dill = "*"
apache-libcloud = "*"
jinja2 = "*"
dotty-dict = "*"
blinker = "*"
peewee = "^3.15.4"
marshmallow-peewee = "^3.4.3"
arrow = "^1.2.3"
pampy = "^0.3.0"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
types-peewee = "^3.15.0.5"
black = "*"
isort = "*"
python-frontmatter = "*"
pylint = "*"
Pygments = "*"
pytest = "*"
ipdb = "*"
mypy = "*"
"punch.py" = "*"
pymdown-extensions = "*"
click-man = "*"
mkdocs-material = "*"
mkdocs-click = "*"
pyre-check = "*"
poethepoet = "*"
types-python-slugify = "*"
types-retry = "*"
types-click = "*"
flake8 = "*"
mkdocstrings-python = "*"
pytest-cov = "*"
mkdocs = "^1.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocs-macros-plugin = "^0.7.0"

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_untyped_calls = false
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
mypy_path = "ogc"

[tool.isort]
profile = "black"
src_paths = "ogc"
add_imports = "from __future__ import annotations"
atomic = true
line_length = 88

[tool.pytest.ini_options]
addopts = "--tb native -rf -s"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.poetry.scripts]
ogc = "ogc.commands.base:start"

[tool.poe.tasks]
clean = """
rm -rf site build dist ogc.egg-info __pycache__ artifacts
"""
_git-commit = "git commit -asm 'Next Release'"
_git-push = "git push"
_git-push-tags = "git push --tags"
_publish = "poetry publish --build -u ${PYPI_USER} -p ${PYPI_PASS}"
bump-patch = "punch --part patch"
bump-minor = "punch --part minor"
bump-major = "punch --part major"
fix = ["isort", "format"]
format = "black ."
isort  = "isort ."
lint   = "pylint ogc tests"
mypy   = "mypy ogc maint"
publish-docs = "mkdocs gh-deploy"
pyre   = "pyre --search-path \"$(python -c 'import site; print(site.getsitepackages()[0])')\""
pytest = "pytest --cov=ogc"
release = ["clean", "isort", "format", "bump-patch", "publish-docs"]
serve-docs  = "mkdocs serve"
test = ["pyre", "mypy", "lint", "pytest"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
