[project]
name = "ogc"
version = "6.6.0"
description = "Provisioner, no more, no less."
authors = [
    { name = "Adam Stokes", email = "51892+adam-stokes@users.noreply.github.com" }
]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/adam-stokes/ogc"
repository = "https://github.com/adam-stokes/ogc"
requires-python = ">= 3.11"
dependencies = [
    "sh>=2.0.6",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "melddict>=1.0.1",
    "paramiko>=3.3.1",
    "retry>=0.9.2",
    "click-didyoumean>=0.3.0",
    "rich>=13.7.0",
    "python-slugify>=8.0.1",
    "attrs>=23.1.0",
    "cattrs>=23.2.3",
    "toolz>=0.12.0",
    "dill>=0.3.7",
    "apache-libcloud>=3.8.0",
    "jinja2>=3.1.2",
    "dotty-dict>=1.3.1",
    "arrow>=1.3.0",
    "pampy>=0.3.0",
    "pyyaml>=6.0.1",
    "gevent>=23.9.1",
    "diskcache>=5.6.3",
    "pytest",
    "greenlet>=3.0.1",
    "magicattr>=0.1.6",
    "plumbum>=1.8.2",
    "structlog>=23.2.0",
]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "python-frontmatter>=1.0.1",
    "pylint>=3.0.2",
    "Pygments>=2.17.2",
    "ipdb>=0.13.13",
    "pymdown-extensions>=10.5",
    "click-man>=0.4.1",
    "mkdocs-material>=9.4.14",
    "mkdocs-click>=0.8.1",
    "flake8>=6.1.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs>=1.5.3",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-macros-plugin>=1.0.5",
    "pytest>=7.4.3",
]

[tool.pytest.ini_options]
addopts = "--tb native -rf -s"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[project.scripts]
ogc = "ogc.commands.base:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true
